--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ammachethimudha",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mannenibhavana.github.io/AmmaChethiMudha/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/style": "^0.8.0",
@@ -26,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "nodemon": "nodemon react-scripts start"
+    "nodemon": "nodemon react-scripts start",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "nodemon": "^3.1.0"
   }
 }
