--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ammachethimudha",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mannenibhavana.github.io/AmmaChethiMudha/",
+  "homepage": "https://mannenibhavana.github.io/login/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/style": "^0.8.0",
@@ -20,6 +20,7 @@
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
