--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ammachethimudha",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mannenibhavana.github.io/login/",
+  "homepage": "https://mannenibhavana.github.io/AmmaChethiMudha/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/style": "^0.8.0",
